feat: Implement Windows management service and UI components
- Added WindowsService for managing Windows servers, including fetching, adding, and deleting servers.
- Created NavbarComponent for application navigation with user account menu.
- Introduced SidebarSplitterComponent for layout management with a sidebar and main content area.
- Developed ServerCardComponent for displaying individual server details with delete functionality.
- Implemented HomeComponent to manage server list and interactions.
- Added ForbiddenComponent for handling access restrictions.
- Created LoginComponent for user authentication.
- Updated web API client to include Windows server management endpoints.
- Enhanced global exception handling for better error reporting.
- Updated API specification to reflect new endpoints and data models.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "C#: MonitorGlass Debug",
       "type": "dotnet",
       "request": "launch",
-      "projectPath": "${workspaceFolder}/src/Web/Web.csproj"
+      "projectPath": "${workspaceFolder}/src/Web/Web.csproj",
     }
   ]
 }
