--- a/src/Web/ClientApp/package.json
+++ b/src/Web/ClientApp/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^20.3.7",
     "@angular/platform-server": "^20.3.7",
     "@angular/router": "^20.3.7",
+    "@microsoft/signalr": "^9.0.6",
     "@primeuix/themes": "^1.2.5",
     "@tailwindcss/postcss": "^4.1.16",
     "postcss": "^8.5.6",
